# test

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md
.github/scripts/: check_orphan_sources.py  weverything-check-changed.py  weverything-launcher.py  weverything-merge-sarif.py
.github/workflows/: coverage.yml  format.yml  lint.yml  test.yml
cmake/: AddMultipleDefinitionsTest.cmake  Cxx23Stacktrace.cmake  EggsTest.cmake  eggs.test-config.cmake.in
example/: CMakeLists.txt  README.md  basic.cpp  exceptions.cpp  helpers.cpp
include/eggs/: test.hpp
include/eggs/test/: cli.hpp
include/eggs/test/detail/: cartesian_product.hpp  checks.hpp  color.hpp  context.hpp  function_ref.hpp  no_destroy.hpp  noinline.hpp  print.hpp  registry.hpp  require.hpp  run_state.hpp  runner.hpp  skip.hpp  stacktrace.hpp  styled.hpp  warning.hpp
src/: checks.cpp  cli.cpp  runner.cpp  test_main.cpp
src/lib/: checks.cpp  cli.cpp  context.cpp  main.cpp  opts.hpp  runner.cpp  styled.cpp
src/main/: cli.cpp  cli.hpp  test_main.cpp
test/: CMakeLists.txt  catches_as.compile_fail.cpp  catches_as.fail.cpp  catches_as.pass.cpp  catches_as.reference_type.compile_fail.cpp  check.fail.cpp  check.pass.cpp  check.will_abort.cpp  context.fail.cpp  context.pass.cpp  exceptions.fail.cpp  multi_tu.a.cpp  nothrow.fail.cpp  nothrow.pass.cpp  parameterized.pass.cpp  parse_cli.pass.cpp  register_p.compile_fail.cpp  register_p.pass.cpp  register_r.compile_fail.cpp  register_r.pass.cpp  registration.cpp  registration.duplicate.fail.cpp  registration.multi_tu.a.cpp  registration.multi_tu.b.cpp  require.fail.cpp  require.null_state.will_abort.cpp  require.pass.cpp  run_test.cmake  skip.fail.cpp  skip.pass.cpp  stacktrace.catches_as.fail.cpp  stacktrace.check.fail.cpp  stacktrace.fail.cpp  stacktrace.nothrow.fail.cpp  stacktrace.pass.cpp  stacktrace.require.fail.cpp  stacktrace.throws.fail.cpp  stacktrace.throws_as.fail.cpp  summary.full_pass.cpp  summary.mixed.cpp  (+12 more)
test/cli/: CMakeLists.txt  parse_cli.pass.cpp  print_options.pass.cpp
test/cmake-fetch_content/: CMakeLists.txt  main.cpp
test/cmake-find_package/: CMakeLists.txt
